--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <title>Task List</title>
 </head>
+<style>
+    .body{
+        background: blue;
+    }
+</style>
 <body>
     <div class="container">
         <div class="row">
@@ -18,7 +24,7 @@
                         <div class="row">
                             <form action="" id="task-form">
                                 <div class="input-field col s12">
-                                    <input type="text" name="task" id="task">
+                                    <input type="text" name="task" id="task" style="color:#fff">
                                     <label for="task">New Task</label>
                                 </div>
                                 <input type="submit" value="Add Task" class="btn">
